# evolution-octave-mathias

./: Walker.npy  main.py  pyproject.toml  solution.json  solution2.json
gp/: LinearGeneticProgramming.ipynb  README.md  symbolic_regression.ipynb
project/: README.md  agent.py  algos.py  environment.py  es_100_10.json  evogym.ipynb  gif.ipynb  gif.py  importations.py  main.py  onepluslmabda_100_10.json  para.py  setup_env.md  solution2.json  solution_avec_para.json  solution_avec_para_50,3,3.json  walkerv2_avec_para_500_20_2.json
project/gif/: Thrower.npy  walker.npy
projectclimber/: algos.py  climberv1_avec_para_20_100_1.json  climberv1_avec_para_50_50_5.json  climberv1_maxstepevoltuif_200_30_2.json  climberv1_maxstepevoltuif_333_30_2.json  climberv1_x4_maxstepevoltuif_333_30_2.json  climberv2_avec_para_50_50_5.json  cmaes_avec_para_100_00_2.json  cmaes_avec_para_200_50_2.json  evogym.ipynb  evogym_python.py  gif.py  main.py  one_plus_lambda.py
projectthrower/: ES_thrower_500_20_5_1.json  algos.py  cmaes_avec_para_200_50_1-5.json  gif.py  importations.py  main.py
projectwalkermapelite/: agent.py  algos.py  climberv2_avec_para_50_50_5.json  cmaes_avec_para_200_50_2.json  environment.py  gif.ipynb  gif.py  importations.py  main.py  solution.json  solution_avec_para_50,30,3.json  solution_map_elites.json
rendu/: climber.json  evaluate.py  thrower.json  train.py
